--- a/batch2.html
+++ b/batch2.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Batch Backlink 2</h1>
     <nav>
+        <a href="/">Home</a> |
         <a href="batch1.html">Batch 1</a> |
         <a href="batch2.html">Batch 2</a> |
         <a href="batch3.html">Batch 3</a> |
